# bevy-rust

./: .cursorrules  README.md
doggo/: Cargo.toml
doggo/src/: main.rs
doggo/src/game/: constants.rs  level_1.rs  level_2.rs  mod.rs  player.rs  player_sprite.rs  world.rs
doggo/src/systems/: collision.rs  death.rs  ground_detection.rs  mod.rs  movement.rs
