[package]
name = "doggo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.dev]
#opt-level = 1

#[profile.dev.package."*"]
#opt-level = 3

[dependencies]
bevy = { version = "0.14.2", features = ["default", "dynamic_linking"] }
